# trusty_rusty_todo_list

./: .gitignore  Cargo.toml  README.md  test.db  test.json
.github/workflows/: rust.yml
src/: category_manager.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs
src/models/: mod.rs
src/storage/: config.rs  json.rs  migrations.rs  mod.rs  sqlite.rs  test_utils.rs
tests/: reset_command.rs
