[package]
name = "trusty_rusty_todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
chrono = { version = "0.4.31", features = ["serde"] }
tempfile = "3.8.1"
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
dirs = "5.0.1"
shellexpand = "3.1.0"

[dev-dependencies]
tempfile = "3.8.1"
assert_cmd = "2.0.12"
predicates = "3.0.3"
