[package]
name = "trusty_rusty_todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
tempfile = "3.8"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"

[[test]]
name = "reset_command"
path = "tests/reset_command.rs"
